The Golden Layer (Business Logic)

--- a/01_Ingest_Crypto_Bronze.ipynb
+++ b/01_Ingest_Crypto_Bronze.ipynb
@@ -69,7 +69,6 @@
       "byteLimit": 2048000,
       "rowLimit": 10000
      },
-     "collapsed": true,
      "inputWidgets": {},
      "nuid": "9b1fdc2b-9b15-4466-8055-61cdaeef0230",
      "showTitle": true,
@@ -173,7 +172,6 @@
       "implicitDf": true,
       "rowLimit": 10000
      },
-     "collapsed": true,
      "inputWidgets": {},
      "nuid": "e21d049c-ce4f-487d-9761-74695ca2fbab",
      "showTitle": true,
@@ -243,6 +241,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -253,7 +252,62 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql\n",
+    "-- 1. Create the Gold Table\n",
+    "-- We use CREATE OR REPLACE because we recalculate metrics daily\n",
+    "CREATE OR REPLACE TABLE gold_crypto_metrics AS\n",
+    "SELECT \n",
+    "  coin_id,\n",
+    "  date,\n",
+    "  -- Get the closing price for the day (using the latest timestamp of that day)\n",
+    "  price_usd as close_price,\n",
+    "  \n",
+    "  -- Window Function: Calculate 7-Day Moving Average\n",
+    "  AVG(price_usd) OVER (\n",
+    "    PARTITION BY coin_id \n",
+    "    ORDER BY date \n",
+    "    ROWS BETWEEN 6 PRECEDING AND CURRENT ROW\n",
+    "  ) as moving_avg_7d,\n",
+    "\n",
+    "  -- Window Function: Calculate Previous Day's Price to find growth\n",
+    "  LAG(price_usd) OVER (\n",
+    "    PARTITION BY coin_id \n",
+    "    ORDER BY date\n",
+    "  ) as prev_day_price,\n",
+    "\n",
+    "  -- Calculate Percentage Growth vs Yesterday\n",
+    "  ROUND(\n",
+    "    ((price_usd - LAG(price_usd) OVER (PARTITION BY coin_id ORDER BY date)) / \n",
+    "    LAG(price_usd) OVER (PARTITION BY coin_id ORDER BY date)) * 100, \n",
+    "  2) as daily_growth_pct\n",
+    "\n",
+    "FROM silver_crypto_prices\n",
+    "-- We group by day to simplify (taking one record per day if multiple exist)\n",
+    "QUALIFY ROW_NUMBER() OVER (PARTITION BY coin_id, date ORDER BY event_time DESC) = 1;\n",
+    "\n",
+    "-- 2. Check the results\n",
+    "SELECT * FROM gold_crypto_metrics \n",
+    "WHERE coin_id = 'bitcoin' \n",
+    "ORDER BY date DESC \n",
+    "LIMIT 10;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "da674d7d-941d-4f2f-987e-c2adea437f94",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Goal: Create a table ready for a dashboard. We will calculate a 7-Day Moving Average (to see trends) and Daily Volatility."
+   ]
   }
  ],
  "metadata": {
@@ -268,7 +322,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5628140147600067,
+     "commandId": 5628140147600066,
      "dataframes": [
       "_sqldf"
      ]
